# bolao

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  audit_results.py  docker-compose.yml  manage_matches.py  pyproject.toml  seed.py  sync_results.py
alembic/: env.py
alembic/versions/: 04d8f17598f9_initial.py  42d3f0ad1b8c_add_pool_prediction_visibility.py  6554bccea3f8_initial.py  b8f3a1c4d2e5_add_ranking_snapshots.py  c1a7e9f4b206_add_user_mirror_predictions.py  d2b8c5e1f307_add_security_columns.py  e3c9a06b48f1_add_pool_public_slug.py  ec9f0e23c909_add_external_id_to_matches.py
app/: config.py  database.py  main.py  middleware.py  templating.py
app/models/: __init__.py  match.py  pool.py  prediction.py  ranking_snapshot.py  user.py
app/routers/: account.py  admin.py  auth.py  home.py  invite.py  matches.py  pools.py  predictions.py
app/schemas/: auth.py  match.py  pool.py  prediction.py
app/services/: autosync.py  matches.py  predictions.py  ranking.py  ratelimit.py  rules.py  scoring.py  sync.py  teams.py
app/templates/: base.html  landing.html
app/templates/account/: settings.html
app/templates/admin/: panel.html
app/templates/auth/: login.html  register.html
app/templates/matches/: _match_card.html  list.html
app/templates/pools/: _match_predictions.html  _ranking_table.html  create.html  dashboard.html  detail.html  member_profile.html  public.html
docs/: AI_CONTEXT.md  AI_HANDOFF.md
tests/: test_pool_copy.py  test_scoring.py  test_sync_scores.py  test_templating.py
