[project]
name = "bolao-copa"
version = "0.1.0"
description = "Sistema de bolão da Copa do Mundo 2026"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
